force-app/main/default/objects/SCOC__LCResponseMessageDetail__c/SCOC__LCResponseMessageDetail__c.object-meta.xml
<CustomObject>
    <description>Liquid Credit Response Message Detail List</description>
    <label>LCResponseMessageDetail</label>
    <nameField>
        <displayFormat>LCRMD-{00000}</displayFormat>
        <label>Liquid Credit Response Message Detail</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LCResponseMessageDetails</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>