force-app/main/default/objects/SCOC__LCResponseMessageDetail__c/fields/SCOC__LCResponseMessage__c.field-meta.xml
<CustomField>
    <fullName>SCOC__LCResponseMessage__c</fullName>
    <description>This required master-detail field contains the lookup key to the associated Liquid Credit Response Message.</description>
    <label>Liquid Credit Response Message</label>
    <referenceTo>SCOC__LCResponseMessage__c</referenceTo>
    <relationshipLabel>Liquid Credit Response Message Details</relationshipLabel>
    <relationshipName>LCResponseMessageDetail</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>