force-app/main/default/objects/SCOC__LCResponseMessageDetail__c/fields/SCOC__message_code__c.field-meta.xml
<CustomField>
    <fullName>SCOC__message_code__c</fullName>
    <description>This field contains the message code for the Liquid Credit Request Message.</description>
    <label>Message Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>