force-app/main/default/objects/SCOC__LCResponseMessageDetail__c/fields/SCOC__message_detail__c.field-meta.xml
<CustomField>
    <fullName>SCOC__message_detail__c</fullName>
    <description>This field contains the message detail for the Liquid Credit Request Message.</description>
    <label>Message Detail</label>
    <length>15000</length>
    <type>LongTextArea</type>
</CustomField>