force-app/main/default/objects/SCOC__LCResponseMessageDetail__c/fields/SCOC__message_source__c.field-meta.xml
<CustomField>
    <fullName>SCOC__message_source__c</fullName>
    <description>This field contains the message source for the Liquid Credit Request Message.</description>
    <label>Message Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>